--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "atomic-admin",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/leonecorrea/atomic-admin"
   },
   "author": "Bruno Leone",
   "license": "MIT"
